# Galois

./: .gitignore  .impeccable.md  README.md  pyproject.toml  run.sh
benchmarks/manifests/: reasoning_data_examples.toml  reasoning_data_smoke.toml
benchmarks/problems/: Alan-Cahn-Navier-Stokes Equations.md  Analysis of an explicit function.md  Existence of the Batchelor Scale.md  Exponential mixing shear flows.md
benchmarks/problems/exercise/: Analysis.md  Banach-Space.md  Funcation-Aanlysis.md  Linear-Algebra.md  Topology.md
benchmarks/problems/finite_fields/: abelian varieties and Jacobians over finite fields.md  canonical polyadic decomposition over finite fields.md  cap set problem.md  completely normal elements.md  infinitely many irreducibles.md  optimal normal basis.md  polynomial Freiman-Ruzsa conjecture.md  polynomials in the maze of finite fields.md  (+5 more)
configs/: defaults.toml
docs/: AGENT_RUNTIME_API.md  API_ERRORS.md  FRONTEND_INTEGRATION.md  GALOIS_SYSTEM_DESIGN.md  garden_problem.md
manual-test/: fake-codex.py  problem.md  strategy.md
references/Lumen/: README.md
src/agent_runtime/: __init__.py  cli.py  service.py
src/galois/: __init__.py  contracts.py
tests/: test_agent_runtime_api.py  test_asset_integrity.py  test_citation_lookup.py  test_cli_entrypoint_docs.py  test_platform_launch.py  test_web_app.py
tests/fixtures/: no_workflows.toml
three_horse/reasoning/: .gitignore  AGENTS.md  ASSET_MANIFEST.md
three_horse/verification/: .gitignore  AGENTS.md  ASSET_MANIFEST.md
three_horse/writing/: AGENTS.md  ASSET_MANIFEST.md  TODO.md
(+529 files in other folders)
