[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "galois"
version = "0.1.0"
description = "Math-agent workspace with Codex-first reasoning and verification"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "foocker" }
]
dependencies = [
  "fastapi>=0.110.0",
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "jsonschema>=4.20.0",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
galois = "galois.platform.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "three_horse/verification/tests",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
