[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Backend-neutral math research agent runtime service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "foocker" }
]
dependencies = [
  "fastapi>=0.110.0",
  "fastmcp>=2.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
agent-runtime = "agent_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]
